# GitHubClassificationDataset

./: .gitmodules  README.md  pyproject.toml
data/: all_topics_freq.csv  annotated_github_topics.csv  annotated_github_topics_wikidata.csv  annotated_github_topics_wikidata.json  annotated_wikitypes.csv  annotations.txt  git_topics_wikidata_embeddings.vec  repo_list.txt  wiki_types.csv
data/pairrank/: mean_std_ranking.csv
gitranking/conf/: build_taxonomy.yaml  disambiguate.yaml  extract.yaml  reconcile.yaml  taxonomy_plot.yaml
gitranking/ghcdio/: deduplicate.py  taxonomy.py
gitranking/ml/: clustering.py  embeddings.py
gitranking/processing/: disambiguate.py  linking.py  preprocessor.py  text.py  wiki.py
gitranking/taxonomy/: build.py
gitranking/topic/: deduplicate.py  disambiguate.py  reconcile.py
gitranking/utils/: seed.py
hFilter/: export_to_CROSSRec.py  export_to_MNB.py  export_to_Ropologue.py  export_to_Surprise.py  main.py  miner.py  preprocessing.py
hFilter/rules/: abbr.csv  delete.csv  low_freq_topics_1.csv  replace.csv  replace_alias.csv
notebooks/: alternative_forms_by_id.ipynb  average_time.ipynb  cso_intersection.ipynb  data_exploration.ipynb  hierarchical_clustering.ipynb  inter_annotators_agreement.ipynb  labels_stats.ipynb  optimal_clusters.ipynb  ranking_clustering.ipynb  results_correlation.csv.ipynb  topic_clustering.ipynb  topics_inspection.ipynb  wikidata_embedding.ipynb
scripts/: annotation_convergence.py  create_project_list.py  data_integration.py  dataset_stats.py  export_dataset.py  extract_readme.py  join_wikipedia.py  original_topic_distribution.py  pgb_tsv2w2v.py  programmin_languages_distribution.py  ranking_convergence.py  readme_integration.py  readme_stats.py  scrape_topic_urls.py  taxogen_intersection.py  taxonomy_annotate.py  tie_analysis.py  topic_description.py  topic_tail_matching.py  wembedding.py  wikidtata_pbg.py  wikipedia_app_domain.py
scripts/R/: BIC_line.R  ranking_scatter.R  results_bar.R  topics_distribution.R
scripts/conf/: annot_convergence.yaml  convergence.yaml  data_integration.yaml  dataset.yaml  extract_readme.yaml  readme_integration.yaml  scraper.yaml  stats.yaml  taxonomy_annotate.yaml  tie_analysis.yaml  topic_tail_matching.yaml  wembedding.yaml  wikidata_pbg.yaml
src/conf/: build_taxonomy.yaml  config.yaml  disambiguate.yaml  reconcile.yaml
src/fileio/: topics.py
src/ghcdio/: deduplicate.py  taxonomy.py  taxonomy2graph.py
src/ml/: clustering.py  embeddings.py
src/processing/: disambiguate.py  linking.py  preprocessor.py  wiki.py
src/run/: annotated_topics.csv  csv_example_learned_settings  csv_example_training.json  (+28 more)
(+44 files in other folders)
